--- a/index.html
+++ b/index.html
@@ -8,19 +8,41 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/all.min.css">
-        <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <!-- ------------------ navbar part start here ----------------------- -->
-  
+    <div class="main_div">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card_one">
+                        <ul>
+                            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                            <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                        </ul>
+                        <div class="img_part">
+                            <img src="images/bike.png" alt="bike_images_here">
+                        </div>
+                        <div class="text_part_start">
+                            <h3>Mountain Biking</h3>
+                            <p>Dolor sit amet magna</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- ------------------ navbar part end here ----------------------- -->
 
     <!-- ------------------ banner part start here ----------------------- -->
- 
+
 
     <!-- ------------------ banner part end here ----------------------- -->
 
